<resources>
    <string name="app_name">Jon Yuri\'s Calculator</string>
    <string name="ac">AC</string>
    <string name="PositiveNegative">+/-</string>
    <string name="DivisionSign">/</string>
    <string name="PercentageSign">%</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplicationSign">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minusSign">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="additionSign">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equalsSign">=</string>
</resources>