<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Result"
            android:labelFor="@id/Result"
            android:autofillHints="phone"
            android:background="@null"
            android:inputType="none"
            android:textIsSelectable="true"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/ac" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPositiveNegative"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/PositiveNegative" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPercentage"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/PercentageSign" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/DivisionSign" />
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/seven" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/eight" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/nine" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/multiplicationSign" />
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/four" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/five" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/six" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubtraction"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/minusSign" />
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/one" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/two" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/three" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddition"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/additionSign" />
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/zero" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/dot" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:textSize="20sp"
                android:text="@string/equalsSign" />
        </TableRow>

    </TableLayout>

</LinearLayout>